actualizacion de back antes de integrar reportes
